Revert "comment donate"
This reverts commit b33df383464410fc7b6c78a6811d3e160b998cba.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div id="method" class="panels custom-button unselected"><i id="route" class="fas fa-route"></i> <i class="fas fa-arrows-alt-h"></i> <i id="crow" class="fas fa-dove"></i></div>
             <div id="help" class="panels custom-button">Help</div>
             <div id="about" class="panels custom-button">About</div>
- <! --      <div id="donate" class="panels custom-button" style="color:rgb(220,15,130)"><b>Donate</b> <i class="fas fa-heart"></i></div> -->
+            <div id="donate" class="panels custom-button" style="color:rgb(220,15,130)"><b>Donate</b> <i class="fas fa-heart"></i></div>
         </div>
         <div id="info" class="padding-container center-leaflet">
             <div id="info-grid" class="panels-container trace-info">
@@ -249,8 +249,8 @@
             <div></div>
             <div style="color:rgb(50,170,210); size:6">The tool is <b>free</b> to use but <b>not free</b> to run so if you use it frequently, please consider donating as to cover bills from API calls (map display, routing and elevation features).<br>Thank you for your support!</div>
             <div id="export-2" class="panels custom-button fancy-button">Download</div>
- <! --      <div id="donate-2" class="panels custom-button fancy-button"><b>Donate</b> <i class="fas fa-heart"></i></div>
-            <div id="save-drive" class="panels custom-button fancy-button">Save to Drive <i class="fab fa-google-drive"></i></div> -->
+            <div id="donate-2" class="panels custom-button fancy-button"><b>Donate</b> <i class="fas fa-heart"></i></div>
+            <div id="save-drive" class="panels custom-button fancy-button">Save to Drive <i class="fab fa-google-drive"></i></div>
         </div>
         <div id="clear-content">
             This will delete all open traces.<br>Do you wish to continue?
