--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                 <h1>About</h1>
                 <p><a href="https://gpxstudio.github.io" target="_blank"><b>gpx.studio</b></a> is a free online GPX viewer and editor which allows to :</p>
                 <ul>
-                    <li>visualize multiple traces in different colors and aided by many different maps (cycling, hiking, satellite, <a href="https://www.strava.com/heatmap" target="_blank">Strava heatmap</a> overlay, etc)</li>
+                    <li>Visualize multiple traces in different colors and aided by many different maps (cycling, hiking, satellite, <a href="https://www.strava.com/heatmap" target="_blank">Strava heatmap</a> overlay, etc)</li>
                     <li>edit traces by adding, inserting, moving or deleting points</li>
                     <li>reverse traces</li>
                     <li>add timestamps to a trace</li>
